force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__Approver__c.field-meta.xml
<CustomField>
    <fullName>sbaa__Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver associated with this Approval Rule.</description>
    <inlineHelpText>Approver associated with this Approval Rule.</inlineHelpText>
    <label>Approver</label>
    <referenceTo>sbaa__Approver__c</referenceTo>
    <relationshipLabel>Approval Rules</relationshipLabel>
    <relationshipName>ApprovalRules</relationshipName>
    <type>Lookup</type>
</CustomField>