force-app/main/default/objects/sbaa__ApprovalRule__c/listViews/sbaa__All.listView-meta.xml
<ListView>
    <fullName>sbaa__All</fullName>
    <columns>NAME</columns>
    <columns>sbaa__Active__c</columns>
    <columns>sbaa__ConditionsMet__c</columns>
    <columns>sbaa__ApprovalStep__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>sbaa__TargetObject__c</columns>
    <columns>sbaa__Approver__c</columns>
    <columns>sbaa__ApprovalTemplate__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>sbaa__AdvancedCondition__c</columns>
    <columns>sbaa__ApproverField__c</columns>
    <columns>sbaa__ApprovalChain__c</columns>
    <columns>sbaa__ApprovalRecipients__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>